//
// Copyright 2025 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.session.tls.v1;

option java_multiple_files = true;
option java_package = "com.google.oak.session.tls.v1";

message TlsFrame {
  // The content of the TLS frame is either a TLS handshake message while the
  // TLS connection is being established, or an encrypted serialized business
  // logic message. Once the message is decrypted the peer is responsible for
  // knowing how to deserialize and handle it.
  bytes content = 1;
}

message TlsSessionRequest {
  TlsFrame frame = 1;
}

message TlsSessionResponse {
  TlsFrame frame = 1;
}

service TlsSession {
  rpc Stream(stream TlsSessionRequest) returns (stream TlsSessionResponse);
}
